# universal-camera-viewer

./: .cursorignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CURRENT_STATUS.md  CURRENT_WORK_STATUS.md  LAST_SESSION_PENDING.md  LICENSE  MIGRATION_PLAN.md  MISSING_COMPONENTS_ANALYSIS.md  Makefile  PROJECT_STRUCTURE.md  README.md  README_UX_IMPROVEMENTS.md  SECURITY.md  TESTING_GUIDE.md  TODO_DOCUMENTATION.md  aaaaaaa.json  index.html  main.py  main_gui.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  reset_theme.py  run_api.py  run_api_no_reload.py  run_python.py  test_backend_complete.py  test_config.py  test_refactored_view.py  test_ui_corrections.py  tsconfig.json  typescript_errors.txt  vite.config.ts
.claude/: settings.local.json
config/: .encryption_key  app_config.json  profiles.json  theme_config.json
data/: .db_key  .encryption_key  camera_data.db  network_analysis.json  scan_cache.json  scan_history.json
data/.encryption/: keystore.json
data/backups/: camera_data_backup_20250715_193910.db  camera_data_backup_20250715_193920.db  cameras_backup_20250723_085312.db
docs/: CAMERA_COMPATIBILITY.md  CAMERA_CONNECTION_GUIDE.md  DATABASE_REDESIGN_SUMMARY.md  DATABASE_SCHEMA_3FN.md  FEATURES.md  PENDING_INTEGRATIONS.md  README.md  V2_INTEGRATION_GUIDE.md  WINDOWS_SETUP.md  api-rest-audit-report.md  api-services.md  architecture.md  backend-latency-implementation-response.md  backend-latency-implementation.md  camera-compatibility.md  camera-protocols.md  deployment.md  development.md  installation.md  mediamtx-history-implementation.md  mediamtx-hybrid-states.md  mui-grid-v7-migration-guide.md  ui-design.md  windows-setup.md
examples/: README.md  websocket_test.html
examples/diagnostics/: camera_detector.py  network_analyzer.py
examples/gui/: components_demo.py  tplink_integrated_viewer.py  viewer_example.py
examples/protocols/: amcrest_example.py  mock_camera_data.json  onvif_example.py  rtsp_example.py  sdk_example.py
examples/testing/: onvif_integration_test.py  performance_test.py  protocol_comparison.py  steren_complete_test.py  test_onvif_imports.py  tplink_complete_test.py
exports/: camera_export_20250710_230308.json  camera_export_20250710_230426.json
scripts/: dev.bat  dev.ps1  python_sidecar.py  start_python_backend.py
src/: ARCHITECTURE.md  App.css  App.tsx  PERFORMANCE_OPTIMIZATIONS.md  THEME_SYSTEM_README.md  UI_UX_DESIGN_GUIDE.md  __init__.py  index.css  main.py  main.tsx
src-python/: DATABASE_API_AUDIT.md  DATABASE_MIGRATION_REPORT.md  STREAMING_FLOW_DOCUMENTATION.md  __init__.py  check_db_schema.py  check_db_usage.py  fix_publications.py  logging_config.py  main.py  migrate_database.py  seed_database.py  test_db_integration.py  test_ffmpeg.py  test_mediamtx_auth.py  test_mediamtx_real_server.py  test_mediamtx_remote_publishing.py
src-python/api/: __init__.py  config.py  dependencies.py  main.py  middleware.py  websocket_events.py
src-python/config/: __init__.py  rate_limit_settings.yaml  settings.py
src-python/data/: .db_key  .encryption_key  camera_data.db
src-python/docs/: MEDIAMTX_FRONTEND_GUIDE.md  architecture.md  elk_integration.md  mediamtx-integration.md  rate_limiting.md  security_implementation.md  technology-comparison.md
src-python/migrations/: encrypt_credentials.py  logging_integration_report_20250723_090519.md  logging_integration_report_20250723_090610.md  update_logging_integration.py
src-python/models/: __init__.py  camera_model.py  connection_model.py  scan_model.py  theme_config.py
src-python/presenters/: __init__.py  base_presenter.py  camera_presenter.py  config_presenter.py  main_presenter.py  mediamtx_auth_presenter.py  mediamtx_publishing_presenter.py  mediamtx_remote_publishing_presenter.py  mediamtx_servers_presenter.py  publishing_presenter.py  scan_presenter.py  theme_presenter.py
src-python/routers/: __init__.py  cameras.py  cameras_v2.py  config.py  connections.py  credentials.py  example_rate_limit.py  mediamtx_paths.py  protocols.py  publishing_history.py  publishing_metrics.py  publishing_viewers.py  scanner.py  stream_profiles.py  stream_profiles_v2.py  streaming.py  streaming_v2.py
src-python/services/: base_service.py  camera_manager_service.py  config_service.py  connection_service.py  create_database.py  data_service.py  encryption_service.py  encryption_service_v2.py  logging_service.py  mediamtx_metrics_service.py  protocol_service.py  scan_service.py  theme_service.py  websocket_stream_service.py
src-python/tests/: test_rate_limit.py
src-python/utils/: __init__.py  async_helpers.py  brand_manager.py  config.py  constants.py  elk_handler.py  error_handlers.py  event_bus.py  exceptions.py  id_generator.py  json_formatter.py  log_context.py  logging_filters.py  logging_integration.py  sanitizers.py
src-python/views/: AUDIT_REPORT.md  UI_UX_DEVELOPMENT_GUIDE.md  design_system.py  main_view.py  main_view_backup.py  main_view_new.py
src-python/websocket/: __init__.py  connection_manager.py  stream_handler.py
src-tauri/: tauri.conf.json
src/config/: appConfig.ts
src/connections/: __init__.py  (+7 more)
src_old/: __init__.py
test/: test_websocket.html
tests/: README_TESTS.md  TEST_STRATEGY.md  __init__.py  conftest.py  test_camera_connection.py  test_camera_universal.py  test_demo.py  test_onvif_profiles.py  test_rtsp_direct.py  test_rtsp_quick.py  test_scan_direct.py  test_scan_real.py  test_scan_service.py  test_tplink_auto.py  test_tplink_simple.py
(+430 files in other folders)
